# egui_mind_map

./: Cargo.toml  readme.md
src/: canvas.rs  handlers.rs  main.rs  node.rs  node_graph.rs  pan_zoom.rs  traits.rs
