[package]
name = "egui_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.28.1" ,features = ["default"] }
eframe = { version = "0.28.1",features = ["default"] }
serde = { version = "1.0.198", features = ["derive"] }
rand = "0.9.0-alpha.1"
slotmap = "1.0.7"